--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,189 @@
 @tailwind components;
 @tailwind utilities;
 
+::selection {
+    background-color: #47a3f3;
+    color: #fefefe;
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --sh-class: #2d5e9d;
+    --sh-identifier: #354150;
+    --sh-sign: #8996a3;
+    --sh-string: #007f7a;
+    --sh-keyword: #e02518;
+    --sh-comment: #a19595;
+    --sh-jsxliterals: #6266d1;
+    --primary: #171717;
+    --sun-rise: #f7cd5d;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    :root {
+        --sh-class: #4c97f8;
+        --sh-identifier: white;
+        --sh-keyword: #f47067;
+        --sh-string: #0fa295;
+        --primary: #fafafa;
+        --sun-rise: #f7cd5d;
+    }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+html {
+    min-width: 360px;
+}
+
+.prose .anchor {
+    @apply absolute invisible no-underline;
+
+    margin-left: -1em;
+    padding-right: 0.5em;
+    width: 80%;
+    max-width: 700px;
+    cursor: pointer;
+}
+
+.anchor:hover {
+    @apply visible;
+}
+
+.prose a {
+    @apply transition-all decoration-neutral-400 dark:decoration-neutral-600 underline-offset-2 decoration-[0.1em];
+}
+
+.prose .anchor:after {
+    @apply text-neutral-300 dark:text-neutral-700;
+    content: '#';
+}
+
+.prose *:hover > .anchor {
+    @apply visible;
+}
+
+.prose pre {
+    @apply bg-neutral-50 dark:bg-neutral-900 rounded-lg overflow-x-auto border border-neutral-200 dark:border-neutral-900;
+}
+
+.prose code {
+    @apply px-1 py-0.5 rounded-lg;
+}
+
+.prose pre code {
+    @apply p-0;
+    border: initial;
+    line-height: 1.5;
+}
+
+.prose code span {
+    @apply font-medium;
+}
+
+.prose img {
+    /* Don't apply styles to next/image */
+    @apply m-0;
+}
+
+.prose h2,
+h3,
+h4 {
+    @apply font-medium tracking-tighter !important;
+}
+
+.prose strong {
+    @apply font-medium;
+}
+
+.prose > :first-child {
+    /* Override removing top margin, causing layout shift */
+    margin-top: 1.25em !important;
+    margin-bottom: 1.25em !important;
+}
+
+pre::-webkit-scrollbar {
+    display: none;
+}
+
+pre {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
+/* Remove Safari input shadow on mobile */
+input[type='text'],
+input[type='email'] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+.prose .tweet a {
+    text-decoration: inherit;
+    font-weight: 500;
+}
+
+table {
+    display: block;
+    max-width: fit-content;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+.prose .callout > p {
+    margin: 0 !important;
+}
+
+details {
+    overflow: hidden;
+}
+
+summary {
+    padding: 0rem;
+    display: block;
+    padding-left: 1rem;
+    position: relative;
+    cursor: pointer;
+}
+
+summary:before {
+    content: '';
+    border-width: 0.4rem;
+    border-style: solid;
+    border-color: transparent transparent transparent currentColor;
+    position: absolute;
+    top: 0.4rem;
+    left: 0.1rem;
+    transform: rotate(0);
+    transform-origin: 0.2rem 50%;
+    transition: 0.2s transform ease;
+}
+
+/* THE MAGIC 🧙‍♀️ */
+details[open] > summary:before {
+    transform: rotate(90deg);
+}
+
+details summary::-webkit-details-marker {
+    display: none;
+}
+
+details > ul {
+    padding-bottom: 1rem;
+    margin-bottom: 0;
+}
+
+input {
+  padding: 0.25em;
+}
+div.p-datepicker-title {
+  margin: auto; /* 4px */
+  gap: 6px;
+  display: flex;
+}
+
+@media print {
+	form.hideprint {
+		visibility: hidden;
+		width: 0;
+		height: 0;
+	}
 }
